Builder Pattern Introduced.